giscanner/annotationparser.py
@@ -934,7 +934,11 @@ class AnnotationApplier(object):
             else:
                 return PARAM_TRANSFER_NONE
         elif isinstance(node, Return):
-            if (node.type.canonical in BASIC_GIR_TYPES or
+            if (isinstance(node.type, Array) and
+                    node.type.element_type is not None and
+                    node.type.element_type.name == 'utf8'):
+                return PARAM_TRANSFER_FULL
+            elif (node.type.canonical in BASIC_GIR_TYPES or
                 (node.type.canonical in [TYPE_NONE, TYPE_ANY] and
                  node.type.is_const)):
                 return PARAM_TRANSFER_NONE
